TY so much for letting me bugfix
Removed the like 3 ai functions i tried for problem testing i  didn't get to remove and made my own better versions. Fixed all of the bugs and added winning and losing. IT TOOK SO LONG  so ty so much for waiting

--- a/style.css
+++ b/style.css
@@ -59,3 +59,33 @@ canvas{
   cursor: pointer;
 }
 
+#bet_button {
+  top: 85%;
+  position: absolute;
+  left: 75%;
+  font-family: 'Pixelify Sans', sans-serif;
+  font-size: 45px;
+  color: #f7ba47;
+  background-color: #497425;
+  border: none;
+  width: 150px;
+  height: 60px;
+  text-align: center;
+  line-height: 60px;
+  cursor: pointer;
+}
+#fold_button{
+  top: 85%;
+  position: absolute;
+  left: 10%;
+  font-family: 'Pixelify Sans', sans-serif;
+  font-size: 45px;
+  color: #f7ba47;
+  background-color: #497425;
+  border: none;
+  width: 150px;
+  height: 60px;
+  text-align: center;
+  line-height: 60px;
+  cursor: pointer;
+}
